# cdf

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  TODOs  build.sh  collection_test.c  rebuild.sh  simple_test.c  test_iterator.c
.github/workflows/: ci.yml
cdf/: Makefile  Makefile.inc  README.md  cdfmodule.json
cdf-core/: Makefile  Makefile.inc  cdfmodule.json
cdf-core/doc/: Tutorial.md
cdf-core/io/: Makefile
cdf-core/ooc/: Makefile
cdf-core/src/: file.h  ooc_object.c  ooc_object.h  ooc_string.h
cdf-core/test/: tc_console.c  tc_fileoutputstream.c  tc_ooc_list.c  test.txt
cdf-db/: Makefile.inc  README.md  cdfmodule.json
cdf-db-entity/: Makefile  Makefile.inc  cdfmodule.json
cdf-db-entity/src/: Makefile  db_entity.h  entity.c  entitymanager.c  entitymanager.h
cdf-db-entity/test/: Makefile  tc_entity.c  tc_entitymanager.c
cdf-db-sqlite/: Makefile  Makefile.inc  cdfmodule.json
cdf-db-sqlite/src/: Makefile  db_sqlite.h  sqlite_connection.c  sqlite_connection.h  sqlite_database.c  sqlite_database.h  sqlite_prepared_statement.h
cdf-db-sqlite/test/: Makefile  tc_sqlite_database.c
cdf-db/src/: Makefile  connection.c  database.c  database.h  prepared_statement.c
cdf-db/test/: Makefile  tc_database.c
cdf-http/: Makefile.inc  cdfmodule.json
cdf-http/src/: Makefile  http.h  http_client.c  http_client.h  http_server.c  http_server.h  http_types.c  http_types.h  http_utils.c  http_utils.h
cdf-http/test/: Makefile  tc_http_client.c  tc_http_header.c  tc_http_request.c  tc_http_response.c  tc_http_server.c  tc_http_utils.c
cdf-json/: .gitignore  Makefile.inc  cdfmodule.json
cdf-json/src/: Makefile  eventparser.c  eventparser.h  jsonobject.h  parserhandlers.c
cdf-json/test/: Makefile  tc_eventsparser.c  tc_jsonobject.c
cdf-log/: Makefile.inc  cdfmodule.json
cdf-log/src/: Makefile  logger.c  logger.h  loggerfactory.c
cdf-log/test/: Makefile  tc_log.c  tc_loggerfactory.c
cdf/src/: Makefile  console.c  consoleoutputstream.h  directory.h  file.c  file.h  fileinputstream.c  fileinputstream.h  fileoutputstream.c  fileoutputstream.h  inputstream.h  ooc.h  ooc_array.c  ooc_array.h  ooc_collection.c  ooc_collection.h  ooc_datetime.c  ooc_iterator.c  ooc_iterator.h  ooc_list.c  ooc_list.h  ooc_macros.h  ooc_map.c  ooc_map.h  ooc_memory.c  ooc_memory.h  ooc_object.c  ooc_object.h  ooc_primitives.c  ooc_queue.c  ooc_queue.h  ooc_singleton.c  ooc_singleton.h  ooc_stack.c  ooc_string.c  ooc_stringtokenizer.c
cdf/test/: Makefile  tc_file.c  (+21 more)
cdftk/: Makefile  Makefile.inc  README.md  bootstrap.sh  cdfmodule.json
cmake/: CompilerSettings.cmake  GetGitVersion.cmake  Options.cmake  cdfConfig.cmake.in
docs/: README.md  cdf-api-reference.md  cdf-db-api-reference.md  cdf-db-entity-api-reference.md  cdf-db-sqlite-api-reference.md  cdf-json-api-reference.md  cdf-log-api-reference.md  project_overview.md
examples/: CMakeLists.txt  Makefile  Makefile.inc  README.md  cdfmodule.json
examples/helloworld/: Makefile  main.c
examples/shapes/: Makefile  circle.c  circle.h  main.c  rectangle.c  rectangle.h  shape.c  shape.h  square.c  square.h
examples/shop/: Makefile  customer.h  shopserver.c
examples/todo-list-api/: README.md  cdfmodule.json  handlers.c  main.c  todo_item.c  todo_item.h
examples/todo-list-api/src/: handlers.c  handlers.h  main.c  todo_item.c  todo_item.h
examples/wwwserver/: Makefile  main.c
py2cdf/: Makefile  README.md  customer.cs  cvisitors.py  hvisitors.py  main.c  ooctypes.py  py2cdf.py  test_code.cs  test_code2.cs  test_code3.cs  visitorcommons.py
src/: CMakeLists.txt  cdf.h.in
src/core/: array.c  array.h  cdf.h  collection.c  collection.h  console.h  consoleoutputstream.h  core.h  datetime.c  datetime.h  iterator.c  iterator.h  list.c  list.h  macros.h  map.c  map.h  memory.c  memory.h  object.c  object.h  ooc.h  ooc_array.c  ooc_object.h  ooc_pair.c  ooc_pair.h  ooc_queue.c  ooc_singleton.c  ooc_stack.c  ooc_stack.h  outputstream.h  pair.c  pair.h  primitives.c  primitives.h  queue.c  queue.h  singleton.c  singleton.h  stack.c  (+5 more)
src/db/: connection.h  database.h  db.h  prepared_statement.h
src/db-entity/: entity.c  entity.h  entitymanager.c  entitymanager.h
src/db-sqlite/: sqlite_connection.c  sqlite_connection.h  sqlite_database.h  sqlite_prepared_statement.c  sqlite_prepared_statement.h
src/http/: http.h  http_client.c  http_client.h  http_server.c  http_server.h  http_types.c  http_types.h  http_utils.h
src/io/: console.h  consoleoutputstream.c  consoleoutputstream.h  directory.h  file.h  fileinputstream.h  fileoutputstream.h  inputstream.h  io.h  outputstream.h  stringinputstream.h  stringoutputstream.h
src/json/: eventparser.c  eventparser.h  json.h  jsonobject.c  jsonobject.h  parserhandlers.c  parserhandlers.h
src/log/: log.h  logger.c  logger.h  loggerfactory.c  loggerfactory.h
test-framework/: Makefile  Makefile.inc  README.md  cdfmodule.json
tests/: CMakeLists.txt
tests/core/: tc_array.c  tc_console.c  tc_consoleoutputstream.c  tc_datetime.c  tc_directory.c  tc_file.c  tc_fileinputstream.c  tc_fileoutputstream.c  tc_inputstream.c  tc_list.c  tc_map.c  tc_object.c  tc_ooc_array.c  tc_ooc_datetime.c  tc_ooc_list.c  tc_ooc_map.c  tc_ooc_object.c  tc_ooc_pair.c  tc_ooc_primitives.c  tc_ooc_queue.c  tc_ooc_singleton.c  tc_ooc_stack.c  tc_ooc_string.c  tc_ooc_stringtokenizer.c  tc_outputstream.c  tc_pair.c  tc_primitives.c  tc_queue.c  tc_singleton.c  tc_stack.c  tc_string.c  tc_stringinputstream.c  tc_stringoutputstream.c  tc_stringtokenizer.c
tests/db/: tc_database.c
tests/db-entity/: customer.h  tc_entity.c  tc_entitymanager.c
tests/db-sqlite/: tc_sqlite_database.c
tests/http/: tc_http_client.c  tc_http_header.c  tc_http_request.c  tc_http_response.c  tc_http_server.c  tc_http_utils.c
tests/io/: tc_console.c  tc_consoleoutputstream.c  tc_directory.c  tc_file.c  tc_fileinputstream.c  tc_fileoutputstream.c  tc_inputstream.c  tc_outputstream.c  tc_stringinputstream.c  tc_stringoutputstream.c
tests/json/: tc_eventsparser.c  tc_jsonobject.c
tests/log/: tc_log.c  tc_loggerfactory.c
(+74 files in other folders)
